--- a/src/14-Exemples.Rmd
+++ b/src/14-Exemples.Rmd
@@ -2,15 +2,15 @@
 
 Hem vist com calcular el grup de Galois de polinomis
 de la forma $x^n-a$. En general, però, calcular el grup de Galois d'un polinomi donat és una tasca difícil.
-Primer veurem com calcular el grup de Galois de polinomis de graus $3$ i $4$. També
-veurem una tècnica que ens dona molta informació sobre el grup de Galois, i que a vegades és
-suficient per determinar-lo.
+Ens conformarem doncs amb estudiar completament els polinomis de graus $3$ i $4$, i farem servir
+tot el que hem après per trobar fórmules per les seves arrels.
 
 ## Polinomis cúbics
 
 Trobarem la solució de la cúbica fent servir el què hem après fins ara. Primer determinarem el seu grup
 de Galois. Assumirem que  la característica de $F$
-no és $2$. Això ens cal perquè en general per un polinomi separable $f(x)$ de grau $n$ tenim $\Gal(f)\leq A_n$ si i només si $\sqrt{\disc(f)}\in F$.
+no és $2$. Això ens cal perquè en general per un polinomi separable $f(x)$ de grau $n$ tenim $\Gal(f)\leq A_n$ si i només si
+$\sqrt{\disc(f(x))}\in F$.
 
 Sigui doncs $f(x)\in F[x]$ un polinomi separable de grau $3$. Resulta que el discriminant ja determina el grup de Galois.
 
@@ -30,13 +30,126 @@ Les seves tres arrels generen tres subcossos diferents de $\RR$.
 
 ::: {.remark}
 La condició que $f$ és irreductible és important! El polinomi $x^3-2x+1=(x-1)(x^2+x-1)$ té discriminant $5$ però grup de Galois $A_3$,
-mentre que el polinomi $x^3-7*x-6=(x+1)(x+2)(x-3)$ té discrimiant $20^2$ i grup de Galois $S_3$.
+mentre que el polinomi $x^3-7x-6=(x+1)(x+2)(x-3)$ té discrimiant $20^2$ i grup de Galois $S_3$.
 :::
+
+Podem fer el resultat del teorema anterior més explícit. Si $\Delta=\disc(f(x))$ és el quadrat d'un element d'$F$, aleshores el
+cos de descomposició d'$f(x)$ s'obté simplement adjuntant una arrel $\alpha$ d'$f(x)$, i el cos que s'obté és Galois amb grup cíclic
+d'ordre $3$. En canvi, si $\Delta$ no és un quadrat aleshores el cos de descomposició és $F(\alpha,\sqrt{D})$. Els generadors del grup
+de Galois són $\sigma$ i $\tau$,
+$$
+\sigma(\theta) = \theta',\quad \sigma(\sqrt{\Delta}) = \sqrt{\Delta},
+$$
+amb $\theta'$ una altra arrel d'$f(x)$, i
+$$
+\tau(\theta) = \theta,\quad \tau(\sqrt{\Delta}) = -\sqrt{\Delta}.
+$$
+
+Considerem ara un polinomi cubic reduït $f(x)=x^3 + px+q \in \QQ[x]$. Donat un polinomi cúbic qualsevol, es pot posar en aquesta forma fent un canvi
+(completant el quadrat) sobre $\QQ$, i al final podem recuperar les arrels originals desfent el canvi. Ja hem vist que el cos de descomposició
+és una extensió $A_3$ sobre $\QQ(\sqrt{\Delta})$. Denotem per $\alpha, \beta,\gamma$ les tres arrels de $f(x)$, que satisfan que $\alpha+\beta+\gamma=0$.
+Si adjuntem una arrel cúbica de la unitat $\zeta=\zeta_3$, aquesta extensió serà radical
+de grau $3$, amb generador donat per la resolvent de Lagrange. Considerem doncs els elements
+\begin{align*}
+[\alpha,1] &= \alpha+\beta+\gamma=0\\
+\theta_+ = [\alpha, \zeta] &= \alpha + \zeta\beta + \zeta^2\gamma\\
+\theta_- = [\alpha, \zeta^2] &= \alpha + \zeta^2\beta + \zeta \gamma.
+\end{align*}
+Com que $1+\zeta+\zeta^2=0$, tenim:
+\begin{align*}
+\theta_++\theta_- &= 3 \alpha\\
+\zeta^2\theta_+ +\zeta\theta_-&=3\beta\\
+\zeta\theta_+ +\zeta^2\theta_- &= 3\gamma.
+\end{align*}
+Per tant, si podem expressar $\theta_+$ i $\theta_-$ en termes dels coeficients de $f(x)$ ja estarem.
+
+Ja sabem en general que els cubs de les resolvents, $\theta_{\pm}^3$, viuen al cos base $\QQ(\zeta,\sqrt{\Delta})$. Expandim $\theta_{\pm}^3$
+i $\sqrt{\Delta}=(\alpha-\beta)(\alpha-\gamma)(\beta-\gamma)$ en termes de les arrels, i fent servir la teoria dels polinomis simètrics
+arribem a les expressions
+\begin{align*}
+\theta_+^3 &= \frac{-27q + 3\sqrt{-3\Delta}}{2}\\
+\theta_-^3 &= \frac{-27q - 3\sqrt{-3\Delta}}{2}\\
+\end{align*}
+(hem triat els noms fent servir $\pm$ justament per això). Obtenim les solucions de la cúbica extraient les arrels cúbiques d'aquestes expressions. Fixem-nos que hi ha tres possibles arrels
+cúbiques en cada cas, i semblaria que obtindriem $9$ solucions, que no té sentit. Però $\theta_+$ i $\theta_-$ no són independents,
+ja que ja sabem que quan n'adjuntem una ja obtenim l'extensió total de grau $6$. De fet, un càlcul semblant al què hem fet per trobar $\theta_{\pm}^3$
+ens dona l'equació $\theta_+\theta_-=-3p$, i per tant només hem de triar una de les arrels cúbiques.
+
+Finalment, si fem servir que $\Delta=-4p^3-27q^2$, i escrivim $C_{\pm} = \frac 1 3 \sqrt[3]{\theta_{\pm}}$, tenim
+$$
+\alpha = C_+ + C_-,\quad \beta = \zeta C_+ + \zeta^-1 C_-,\quad \gamma = \zeta^-1 C_+ + \zeta C_-,
+$$
+amb $\zeta=\frac{-1+\sqrt{-3}}{2}$.
 
 ## Polinomis quàrtics
 
-TODO. Fer servir material de la secció anterior, també
+Sigui $f(x)=x^4+px^2+qy+r\in F[x]$ un polinomi de grau $4$ en forma reduïda i arrels $\alpha_1,\alpha_2,\alpha_3,\alpha_4$. Sigui $G=\Gal(f)$.
 
-## Mètode local
+Suposem primer que $f(x)$ és reductible. Si té una arrel racional, aleshores estem en el cas del polinomi cúbic de l'apartat anterior.
+D'altra banda, si $f(x)$ és producte de dos quadràtics, aleshores el seu cos de descomposició és $K=F(\sqrt{D_1},\sqrt{D_2})$, on els $D_i$
+són els discriminants dels polinomis quadràtics. Si el producte $D_1D_2$ és un quadrat perfecte, aquesta extensió s'anomena *biquadràtica*,
+i $G$ és isomorf a $V_4\cong \ZZ/2\ZZ\times\ZZ/2\ZZ$. Si el producte és un quadrat perfecte, aleshores $K=F(\sqrt{D_1})$ és una extensió quadràtica.
 
-TODO
+Considerem ara el cas de $f(x)$ irreductible. Aleshores $G$ és un subgrup transitiu de $S_4$, i hi ha les següents possibilitats:
+- $S_4$,
+- $A_44,
+- $D_{2\times 4}=\{1,(1324),(12)(34), (1423),(13)(24), (14)(23), (12), (34)\}$ i els seus $3$ conjugats,
+- $V_4 = \{1, (12)(34), (13)(24), (14)(23)\}$, o
+- $C_4 = \{1, (1234), (13)(24), (1432)\}$ i els seus $3$ conjugats.
+
+Considerem els elements
+\begin{align*}
+\theta_1 &= (\alpha_1+\alpha_2)(\alpha_3+\alpha_4)\\
+\theta_2 &= (\alpha_1+\alpha_3)(\alpha_2+\alpha_4)\\
+\theta_3 &= (\alpha_1+\alpha_4)(\alpha_2+\alpha_3),
+\end{align*}
+tenim una acció de $S_4$ en el conjunt $\{\theta_1,\theta_2,\theta_3\}$, i el subgrup que els fixa tots tres és precisament $V_4$. Fixem-nos
+que les funcions simètriques elementals en els $\theta_i$ són fixes per tot $G$, i per tant viuen al cos base. Obtenim així el polinomi
+$$
+h(x) =  (x-\theta_1)(x-\theta_2)(x-\theta_3) = x^3-2px^2+ (p^2-4r)x + q^2,
+$$
+que s'anomena la *resolvent cúbica* de $f(x)$. Comprant les definicions dels discriminants per $f(x)$ i $h(x)$, veiem que $\disc(f(x))=\disc(h(x))$.
+En particular, trobem:
+$$
+\Delta=\disc(f(x))=\disc(h(x)) = -4 p^{3} q^{2} + 16 p^{4} r - 27 q^{4} + 144 p q^{2} r - 128 p^{2} r^{2} + 256 r^{3}.
+$$
+
+El següent resultat ens classifica $G$ segons aquesta informació.
+
+::: {.theorem}
+1. Si $h(x)$ és irreductible, aleshores:
+  1. Si $\Delta$ no és un quadrat, $G=S_4$.
+  2. Si $\Delta$ és un quadrat, $G=A_4$.
+2. Si $h(x)$ té exactament una arrel a $F$, aleshores:
+  1. Si $f(x)$ és irreductible a $F(\sqrt{\Delta})$, aleshores $G=D_{2\times 4}$.
+  2. Si no, aleshores $G=C_4$.
+3. Si $h(x)$ té tres arrels a $F$, aleshores $G=V_4$.
+:::
+
+::: {.proof}
+Si $h(x)$ és irreductible i $D$ no és un quadrat, aleshores $G\not\leq A_4$ i $\Gal(h(x))=S_3$. Per tant, $|G|$ és divisible per $6$ i l'unica
+possibilitat és $S_4$.
+
+Si $h(x)$ és irreductible i $D$ és un quadrat, aleshores $G\leq A_4$, i a més $\Gal(h(x))=A_3$, per tant $3 \mid |G|$ i l'única possibilitat és $A_4$.
+
+Si $h(x)$ té tres arrels a $F$, aleshores $G$ fixa $\theta_i$ per $i=1,2,3$, i per tant $G\leq V$, d'on en treiem $G = V$
+
+Finalment, si $h(x)$ té exactament una arrel, posem $\theta_1\in F$, aleshores $G$ fixa $\theta_1$ però no intercanvia $\theta_2\leftrightarrow \theta_3$.
+Això vol dir que $G\leq D_{2\times 4}$ i $G \not\leq V$. Per tant, $G=D_{2\times 4}$ o $G=C_4$. Per distingir-los, podem observar que $D_{2\times 4}\cap A_4=V_4$
+i $C_4\cap A_4=\{1, (13)(24)\}$, i aquest segon no és transitiu en les arrels de $f(x)$. Per tant el segon cas passa justament
+quan $h(x)$ factoritza sobre $F(\sqrt{\Delta})$, i ja hem cobert tots els casos.
+:::
+
+Veiem ara com trobar les arrels explícitament, en el cas que $F=\QQ$. Sigui $K/F$ el cos de descomposició de $f(x)$, i sigui $E=\QQ(\theta_1,\theta_2,\theta_3)$ el cos de descomposició
+de la resolvent cúbica $h(x)$. Aleshores $\Gal(K/E)\cong V_4$ i és per tant una extensió biquadràtica. Això vol dir que podem trobar les
+arrels $\alpha_i$ en termes d'arrels quadrades d'expressions en les $\theta_j$. En aquest cas, com que $(\alpha_1+\alpha_2)(\alpha_3+\alpha_4)= \theta_1$
+i $(\alpha_1+\alpha_2)+(\alpha_3+\alpha_4)=0$, obtenim la primera fila de la següent taula. Les altres files es fan igual:
+\begin{align*}
+\alpha_1+\alpha_2 &= \sqrt{-\theta_1},& \alpha_3+\alpha_4&=-\sqrt{-\theta_1},\\
+\alpha_1+\alpha_3 &= \sqrt{-\theta_2},& \alpha_2+\alpha_4&=-\sqrt{-\theta_2},\\
+\alpha_1+\alpha_4 &= \sqrt{-\theta_3},& \alpha_2+\alpha_3&=-\sqrt{-\theta_3}.\\
+\end{align*}
+Les arrels quadrades no són independents, ja que el producte $\sqrt{-\theta_1}\sqrt{-\theta_2}\sqrt{-\theta_3}=-q$ i per tant un cop
+triades dues arrels la tercera ja ve determinada. Amb aquestes sis equacions podem aïllar les $\alpha_i$, per exemple
+$\alpha_1=\frac 1 2 (\sqrt{-\theta_1} + \sqrt{-\theta_2}+\sqrt{-\theta_3})$. Les $\theta_j$ són arrels d'una cúbica, que ja sabem resoldre.
+
